Changed Command line
ProcessBuilder doesn't seem to work on some computers; so used
Runtime.getRunTime.exec instead. Also created some more error messages
and debug infomation.